Fixed glitchy layout on mobile
Bottom aligned layout didn't work well together with opening the manual on mobile devices. Finetuned breakpoints and slightly adjusted the approach to work for all screen sizes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,12 +23,14 @@
   /* --- 1.1 General -------------------------------------------------------- */
   :root{
     --board-width: 18.75rem;
-    --page-padding: .625rem;
+    --page-padding-horizontal: .625rem;
+    --page-padding-vertical: 1.5rem;
   }
 
   @media screen and (min-width: 720px){
     :root{
-      --page-padding: 1.5rem;
+      --page-padding-horizontal: 1.5rem;
+      --page-padding-vertical: 3rem;
     }
   }
 
@@ -154,7 +156,8 @@ body{
   display: grid;
   grid-template-rows: 1fr auto;
   align-items: flex-end;
-  height: 100vh;
+  min-height: 100vh;
+  padding: var(--page-padding-vertical) 0 var(--page-padding-vertical);
 }
 
 @media screen and (min-width: 24em) and (min-height: 40em){
@@ -169,10 +172,10 @@ body{
   }
 }
 
-@media screen and (min-width: 60em) and (min-height: 48em){
+@media screen and (min-width: 54em) and (min-height: 48em){
   body{
     grid-template-rows: auto auto;
-    align-content: center;
+    align-content: flex-start;
   }
 }
 
@@ -183,7 +186,7 @@ body{
   display: grid;
   grid-template-columns: 1fr auto;
   width: var(--board-width);
-  margin: 0 auto calc(2 * var(--page-padding));
+  margin: 0 auto var(--page-padding-vertical);
 }
 
 .scores output{
@@ -344,24 +347,22 @@ body{
   .manual{
     opacity: 0;
     max-width: var(--board-width);
-    margin: 0 auto calc(4 * var(--page-padding));
+    margin: 0 auto var(--page-padding-vertical);
   }
 
   .manual:not([hidden]){
     animation: fadeIn .3s .1s forwards;
   }
 
-  @media screen and (min-width: 72em){
+  /* --- 7.2 Move board and top bar when manual is opened ------------------- */
+  @media screen and (min-width: 54em){
     .manual{
-      transform: translateX( calc( -50vw - (2 * var(--page-padding)) ) );
+      transform: translateX( -50vw );
       position: absolute;
-      top: var(--page-padding);
-      right: var(--page-padding);
+      top: var(--page-padding-vertical);
+      right: var(--page-padding-horizontal);
     }
-  }
 
-  /* --- 7.2 Move board and top bar when manual is open --------------------- */
-  @media screen and (min-width: 50em){
     .board,
     .top-bar{
       transition: transform .24s cubic-bezier(0.48, 0.18, 0.14, 0.96);
@@ -370,7 +371,7 @@ body{
     .show-manual .board,
     .show-manual .top-bar{
       transform:
-        translateX( calc( (.5 * var(--board-width)) - var(--page-padding) ));
+        translateX( calc(.5 * var(--board-width) + var(--page-padding-horizontal)) );
     }
   }
 
@@ -501,15 +502,16 @@ body{
 .settings .layout{
   transform: scale(.95);
   max-width: var(--board-width);
-  margin: var(--page-padding) auto;
+  margin: var(--page-padding-vertical) auto;
 }
 
 .settings:not([hidden]) .layout{
   animation: popIn .2s forwards;
 }
 
-.settings h2{
-  padding-top: .375rem;
+.settings .close-settings{
+  float: right;
+  margin-top: -.375rem;
 }
 
 .settings fieldset{
